5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1592_1802.log
== TEST (2019-03-23 20:42:24) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:46:24) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:46:29) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- EXECUTION TIME:
0.121299
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:46:31) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:46:52) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- OUTPUT:
-122.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:47:31) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(dano)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:47:40) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(dano)
-- OUTPUT:
322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:49:40) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- EXECUTION TIME:
0.133811
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:34:03) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = sqrt(5 * D1) + pi ** D2/3
print(int(vida - dano))
-- EXECUTION TIME:
0.165
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:34:28) 
-- CODE:
from math import*
vida =float(input("Vidas iniciais: "))
D1= float(input("D1:"))
D2= float(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(float(vida - dano)
-- EXECUTION TIME:
0.191577
-- ERROR:
  File "/home/codebench/codes/1592/1802/main.py", line 8
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:35:03) 
-- CODE:
from math import*
vida = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- EXECUTION TIME:
0.1156
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:25:06) 
-- CODE:
from math import*
vida = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

dano = int(sqrt(5 * D1) + pi ** D2/3)
print(vida - dano)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:26:59) 
-- CODE:
from math import*
vida = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

dano = sqrt(5 * D1) + pi ** D2/3
print(int(vida - dano))
-- EXECUTION TIME:
0.208943
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:27:30) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3
print(int(V - D3))
-- EXECUTION TIME:
0.163982
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:28:04) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3
print(int(V - D3))
-- EXECUTION TIME:
0.134013
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:52) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3
print(int(V - D3))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:12:32) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3
print(int(V - D3))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:13:15) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3
N = V - D3
print(int(N))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:14:06) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = [sqrt(5 * D1) + pi ** D2/3]
N = V - D3
print(int(N))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    N = V - D3
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:14:51) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3

print(int(V - D3))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:15:53) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1/20) + pi ** (D2/20)/3

print(int(V - D3))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:17:48) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1/20) + pi ** (D2/20)/3

print(int(V - D3))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:25:56) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1/20) + pi ** (D2/20)/3

print(int(V - D3))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:49:27) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1/20) + pi ** (D2/20)/3

print(int(V - D3))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:51:34) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1:"))
D2 = int(input("D2:"))

D3 = sqrt(5 * D1) + pi ** D2/3

print(int(V - D3))
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:53:10) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 * (1/20)
D2 = d2 * (1/20)
D3 = sqrt(5 * D1) + pi ** D2/3

print(int(V - D3))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:56:29) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 * (1/20)
D2 = d2 * (1/20)
D3 = sqrt(5 * D1) + pi ** D2/3
total = V - D3
print(int(total))
-- OUTPUT:
199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:57:22) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 * (1/20)
D2 = d2 * (1/20)
D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3
print(int(total))
-- OUTPUT:
198
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:38:18) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 + (1/20)
D2 = d2 + (1/20)
D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:39:16) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 * (1/20)
D2 = d2 * (1/20)
D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
198
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:16:11) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
d1 = int(input("D1: "))
d2 = int(input("D2: "))

D1 = d1 
D2 = d2 
D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:17:13) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))


D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:19:23) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = [sqrt(5 * D1) + pi ** (D2/3)]
total = V - D3

print(int(total))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = V - D3
TypeError: unsupported operand type(s) for -: 'int' and 'list'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:19:44) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:33:27) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V % D3

print(int(total))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:34:15) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:46:46) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:47:08) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- EXECUTION TIME:
0.139225
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:33:17) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = sqrt(5 * D1) + pi ** (D2/3)
total = V - D3

print(int(total))
-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:39:19) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = int(sqrt(5 * D1) + pi ** (D2/3))
total = V - D3

print(int(total))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:39:42) 
-- CODE:
from math import*
V = int(input("Vidas iniciais: "))
D1 = int(input("D1: "))
D2 = int(input("D2: "))

D3 = int(sqrt(5 * D1) + pi ** (D2/3))
total = V - D3

print(int(total))
-- EXECUTION TIME:
0.190942
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
